frontend/src/pages/cart.module.scss
@use "#styles/theme" as theme;
@import "#styles/helpers/mixins";

.cartContainerWrapper {
  display: flex;
  justify-content: center;
  margin-bottom: 80px;
}

.cartContainer {
  display: flex;
  width: 70%;
}

.cartItemsList {
  display: flex;
  flex-direction: column;
  width: 60%;
}

.cartItem {
  display: flex;
  align-items: center;
  height: 9rem;
}

.cartItemImage {
  width: 7.5rem;
  height: 8.25rem;
  object-fit: contain;
}

.cartItemDetails {
  width: 20rem;
}

.cartItemQuantitySelector {
  display: flex;
  align-items: center;
  margin-left: 5rem;
}

.cartItemQuantityInput {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 2rem;
  height: 32px;
  border: none;
  outline: none;
}

.cartItemQuantityButton {
  width: 32px;
  height: 32px;
  cursor: pointer;
  background: none;
  border: none;
  outline: none;
}

.cartItemTotalCost {
  justify-content: center;
  width: 6rem;
  margin-left: 2rem;
}

.deleteButtonWrapper {
  display: flex;
  flex-grow: 1;
  justify-content: center;
}

.deleteButton {
  padding-left: 3rem;
  cursor: pointer;
}

.cartOrderSummary {
  width: 35%;
  height: fit-content;
  padding: 32px;
  margin-left: 3rem;
  background: #f4f4f4;
  border-radius: 4px;
  box-shadow: theme.$main-box-shadow;
}

.orderSumaryText {
  margin-bottom: 20px;
  font-size: 20px;
  font-weight: 800;
  text-transform: uppercase;
}

.totalCostDivider {
  margin: 40px 0;
}

.cartOrderSummaryDetails {
  margin-bottom: 40px;
}

.orderTotalText {
  font-weight: 500;
}

.confimOrderButton {
  @include product-cart-purshase-button;

  display: flex;
  flex-grow: 1;
  justify-content: center;
}

